updated lg and knn for ordinal encoding of month.

--- a/model_knn.ipynb
+++ b/model_knn.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:46:59.236781Z",
-     "start_time": "2023-06-08T20:46:58.446534Z"
+     "end_time": "2023-06-08T20:49:59.381018Z",
+     "start_time": "2023-06-08T20:49:58.449491Z"
     }
    },
    "outputs": [],
@@ -48,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:46:59.392401Z",
-     "start_time": "2023-06-08T20:46:59.239274Z"
+     "end_time": "2023-06-08T20:49:59.577248Z",
+     "start_time": "2023-06-08T20:49:59.382884Z"
     }
    }
   },
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:00.173786Z",
-     "start_time": "2023-06-08T20:46:59.393511Z"
+     "end_time": "2023-06-08T20:50:01.474696Z",
+     "start_time": "2023-06-08T20:49:59.577902Z"
     }
    }
   },
@@ -82,32 +82,36 @@
     "norm_and_one_hot_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
     "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
+    "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (Normalizer(), make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "log_and_ordinal_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
     "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
+    "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (log_transform, make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "power_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
     "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
+    "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (PowerTransformer(), make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "robust_transformation = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
     "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
+    "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (RobustScaler(), make_column_selector(dtype_include=\"number\"))\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:00.180516Z",
-     "start_time": "2023-06-08T20:47:00.173274Z"
+     "end_time": "2023-06-08T20:50:01.483986Z",
+     "start_time": "2023-06-08T20:50:01.475383Z"
     }
    }
   },
@@ -123,8 +127,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:00.185350Z",
-     "start_time": "2023-06-08T20:47:00.183281Z"
+     "end_time": "2023-06-08T20:50:01.490764Z",
+     "start_time": "2023-06-08T20:50:01.488457Z"
     }
    }
   },
@@ -139,8 +143,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:00.190421Z",
-     "start_time": "2023-06-08T20:47:00.187025Z"
+     "end_time": "2023-06-08T20:50:01.499392Z",
+     "start_time": "2023-06-08T20:50:01.492501Z"
     }
    }
   },
@@ -155,8 +159,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:00.197794Z",
-     "start_time": "2023-06-08T20:47:00.191516Z"
+     "end_time": "2023-06-08T20:50:01.499670Z",
+     "start_time": "2023-06-08T20:50:01.497484Z"
     }
    }
   },
@@ -177,8 +181,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:00.202822Z",
-     "start_time": "2023-06-08T20:47:00.195583Z"
+     "end_time": "2023-06-08T20:50:01.506421Z",
+     "start_time": "2023-06-08T20:50:01.501699Z"
     }
    }
   },
@@ -251,8 +255,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:00.205642Z",
-     "start_time": "2023-06-08T20:47:00.202649Z"
+     "end_time": "2023-06-08T20:50:01.512284Z",
+     "start_time": "2023-06-08T20:50:01.509349Z"
     }
    }
   },
@@ -274,8 +278,11 @@
       "                                                             7, 8, 9, 10, 11,\n",
       "                                                             12]]),\n",
       "                                 ['SpecificHoliday', 'Month']),\n",
+      "                                ('drop', 'drop',\n",
+      "                                 ['Info_Page_Time', 'ProductPage_Time',\n",
+      "                                  'GoogleAnalytics_ER']),\n",
       "                                ('powertransformer', PowerTransformer(),\n",
-      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x13c003280>)]),\n",
+      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x137beb190>)]),\n",
       "    'knn__n_neighbors': 19,\n",
       "    'knn__p': 1,\n",
       "    'knn__weights': 'uniform',\n",
@@ -303,8 +310,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:06.320629Z",
-     "start_time": "2023-06-08T20:47:00.206677Z"
+     "end_time": "2023-06-08T20:50:07.798602Z",
+     "start_time": "2023-06-08T20:50:01.514878Z"
     }
    }
   },
@@ -314,8 +321,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.256012\n1                              score_time mean score  0.137685\n2                      5-fold CV F1 Score mean score  0.635646\n3                      5-fold CV Accuracy mean score  0.879352\n4             5-fold CV Balanced Accuracy mean score  0.795555\n5  5-fold CV Matthew's Correlation Coefficient me...  0.565481",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.256012</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.137685</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.635646</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.879352</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.795555</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.565481</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.266528\n1                              score_time mean score  0.139839\n2                      5-fold CV F1 Score mean score  0.635646\n3                      5-fold CV Accuracy mean score  0.879352\n4             5-fold CV Balanced Accuracy mean score  0.795555\n5  5-fold CV Matthew's Correlation Coefficient me...  0.565481",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.266528</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.139839</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.635646</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.879352</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.795555</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.565481</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 11,
      "metadata": {},
@@ -333,8 +340,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:08.313953Z",
-     "start_time": "2023-06-08T20:47:06.322324Z"
+     "end_time": "2023-06-08T20:50:09.857116Z",
+     "start_time": "2023-06-08T20:50:07.801449Z"
     }
    }
   },
@@ -358,8 +365,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:08.896765Z",
-     "start_time": "2023-06-08T20:47:08.313757Z"
+     "end_time": "2023-06-08T20:50:10.499696Z",
+     "start_time": "2023-06-08T20:50:09.859661Z"
     }
    }
   },
@@ -371,8 +378,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:08.900530Z",
-     "start_time": "2023-06-08T20:47:08.897619Z"
+     "end_time": "2023-06-08T20:50:10.503265Z",
+     "start_time": "2023-06-08T20:50:10.500448Z"
     }
    }
   },
@@ -395,34 +402,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:08.928102Z",
-     "start_time": "2023-06-08T20:47:08.907444Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:08.932301Z",
-     "start_time": "2023-06-08T20:47:08.922430Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-08T20:47:08.941851Z",
-     "start_time": "2023-06-08T20:47:08.926973Z"
+     "end_time": "2023-06-08T20:50:10.548066Z",
+     "start_time": "2023-06-08T20:50:10.510697Z"
     }
    }
   }
