--- a/model_voting_ensemble.ipynb
+++ b/model_voting_ensemble.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-06T23:19:57.638659Z",
-     "start_time": "2023-06-06T23:19:50.804975Z"
+     "end_time": "2023-06-08T22:55:19.257308Z",
+     "start_time": "2023-06-08T22:55:18.180816Z"
     }
    },
    "outputs": [],
@@ -33,8 +33,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T23:19:58.152152Z",
-     "start_time": "2023-06-06T23:19:57.639135Z"
+     "end_time": "2023-06-08T22:55:19.480909Z",
+     "start_time": "2023-06-08T22:55:19.259833Z"
     }
    }
   },
@@ -48,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T23:19:58.785718Z",
-     "start_time": "2023-06-06T23:19:58.153559Z"
+     "end_time": "2023-06-08T22:55:19.682789Z",
+     "start_time": "2023-06-08T22:55:19.481537Z"
     }
    }
   },
@@ -58,7 +58,7 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "voting_classifier_2 = VotingClassifier(\n",
+    "voting_classifier = VotingClassifier(\n",
     "    estimators=[\n",
     "        (\"lr_model\", lr_model),\n",
     "        (\"knn_model\", knn_model),\n",
@@ -66,111 +66,44 @@
     "        (\"nb_model\", nb_model),\n",
     "        (\"svc_model\", svc_model)\n",
     "    ],\n",
-    "    voting=\"soft\"\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T23:19:58.791911Z",
-     "start_time": "2023-06-06T23:19:58.788830Z"
+     "end_time": "2023-06-08T22:55:19.688331Z",
+     "start_time": "2023-06-08T22:55:19.686148Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-06T23:19:58.796350Z",
-     "start_time": "2023-06-06T23:19:58.792475Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "params = {\n",
-    "    \"svc_model__svc_model__probability\": [True],\n",
-    "    \"voting\": [\"hard\", \"soft\"],\n",
-    "}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-06T23:19:58.799996Z",
-     "start_time": "2023-06-06T23:19:58.796771Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'svc_model__svc_model__probability': True, 'voting': 'hard'}\n",
-      "Best parameter (CV score: 0.669):\n"
-     ]
-    }
-   ],
-   "source": [
-    "best_model = (\n",
-    "    TuneHyperParams()\n",
-    "    .random_grid_search(\n",
-    "        voting_classifier_2,\n",
-    "        parameters=params\n",
-    "    )\n",
-    "    .fit_model(\n",
-    "        data.TRAINING.predictors,\n",
-    "        data.TRAINING.outcome\n",
-    "    )\n",
-    "    .get_best_model()\n",
-    ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-07T09:43:47.474294Z",
-     "start_time": "2023-06-06T23:19:58.801735Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "final_model_performance = FinalModelPerformance(\n",
-    "    model=best_model,\n",
+    "    model=voting_classifier,\n",
     "    data=data\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T09:43:47.477886Z",
-     "start_time": "2023-06-07T09:43:47.472926Z"
+     "end_time": "2023-06-08T22:58:15.174733Z",
+     "start_time": "2023-06-08T22:58:15.168760Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "                             Metric for Training Set        Score\n0                                fit_time mean score  1163.984296\n1                              score_time mean score     0.488224\n2                      5-fold CV F1 Score mean score     0.668702\n3                      5-fold CV Accuracy mean score     0.880479\n4             5-fold CV Balanced Accuracy mean score     0.835998\n5  5-fold CV Matthew's Correlation Coefficient me...     0.605569",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>1163.984296</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.488224</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.668702</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.880479</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.835998</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.605569</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                             Metric for Training Set       Score\n0                                fit_time mean score  181.660185\n1                              score_time mean score    0.558682\n2                      5-fold CV F1 Score mean score    0.673391\n3                      5-fold CV Accuracy mean score    0.883039\n4             5-fold CV Balanced Accuracy mean score    0.837519\n5  5-fold CV Matthew's Correlation Coefficient me...    0.611114",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>181.660185</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.558682</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.673391</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.883039</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.837519</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.611114</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,21 +114,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T11:20:49.892631Z",
-     "start_time": "2023-06-07T09:43:47.479935Z"
+     "end_time": "2023-06-08T23:13:27.350328Z",
+     "start_time": "2023-06-08T22:58:16.214285Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.696366\n1                           Accuracy  0.893896\n2                  Balanced Accuracy  0.793713\n3  Matthew's Correlation Coefficient  0.638024",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.696366</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.893896</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.793713</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.638024</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.702254\n1                           Accuracy  0.897173\n2                  Balanced Accuracy  0.799324\n3  Matthew's Correlation Coefficient  0.644904",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.702254</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.897173</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.799324</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.644904</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,33 +139,42 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T11:39:25.085015Z",
-     "start_time": "2023-06-07T11:20:49.895190Z"
+     "end_time": "2023-06-08T23:18:27.011648Z",
+     "start_time": "2023-06-08T23:13:27.353151Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
-      "text/plain": "['./models_exports/voting_ensamble.joblib']"
+      "text/plain": "['./models_exports/voting_ensemble.joblib']"
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump(final_model_performance.model, \"./models_exports/voting_ensamble.joblib\")"
+    "dump(final_model_performance.model, \"./models_exports/voting_ensemble.joblib\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T12:48:18.566860Z",
-     "start_time": "2023-06-07T12:48:18.320706Z"
+     "end_time": "2023-06-08T23:18:27.486707Z",
+     "start_time": "2023-06-08T23:18:27.014236Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
