adding final model results of the RF model.

--- a/model_random_forest.ipynb
+++ b/model_random_forest.ipynb
@@ -212,14 +212,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
-   "source": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.701235\n1                           Accuracy  0.900860\n2                  Balanced Accuracy  0.807434\n3  Matthew's Correlation Coefficient  0.643525",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.701235</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.900860</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.807434</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.643525</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_model.get_final_model_performance()"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:22:10.816854Z",
-     "start_time": "2023-06-06T09:22:10.813352Z"
+     "end_time": "2023-06-09T11:24:08.970627Z",
+     "start_time": "2023-06-09T11:24:07.293020Z"
     }
    }
   },
@@ -244,6 +256,19 @@
     "ExecuteTime": {
      "end_time": "2023-06-06T09:57:48.463994Z",
      "start_time": "2023-06-06T09:57:48.264390Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-09T11:18:49.695138Z",
+     "start_time": "2023-06-09T11:18:47.242675Z"
     }
    }
   },
